@@ -1,4 +1,5 @@
 5.0.1 -> 5.0.2:
+    - jbj: fix: python: re-add rpm.archscore() for smart depsolving usage.
     - jbj: backport %{shrink:...} and %{getenv:...} builtin macros.
     - jbj: updated sv.po (Translation Project).
     - jbj: fix: permit #%patchN comments by forcing single line expansion.
